--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -69,7 +69,9 @@
 }
 
 h1 {
-	font-size: var(--48px, 48px);
+	font-size: var(--72px, 72px);
+	font-weight: 700;
+	font-family: var(--sans);
 }
 
 h2 {
@@ -90,4 +92,19 @@ h5 {
 
 h6 {
 	font-size: var(--20px, 20px);
+}
+
+
+p {
+	font-size: var(--24px);
+}
+
+section {
+	max-width: 640px;
+	margin: 16px auto;
+}
+
+video {
+	display: block;
+	margin: 32px auto;
 }
