--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -21,11 +21,13 @@
 	--font-body: var(--serif);
 	--font-form: var(--sans);
 	--color-bg: var(--color-white);
-	--color-fg: var(--color-gray-900);
-	--color-primary: var(--color-black);
-	--color-link: var(--color-black);
-	--color-focus: var(--color-red);
-	--color-mark: var(--color-yellow);
+	--color-bg2: var(--color-gray-100);
+	--color-fg: var(--color-gray-800);
+	--color-primary: #00ffff;
+	--color-secondary: #ff00ff;
+	--color-link: var(--color-fg);
+	--color-focus: var(--color-primary);
+	--color-mark: var(--color-secondary);
 	--color-selection: var(--color-gray-300);
 	--color-border: var(--color-gray-300);
 	--color-button-bg: var(--color-gray-300);
