--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -72,6 +72,7 @@
 
 p, h1, h2, h3, h4, li, caption {
 	font-size: var(--24px);
+	line-height: 1.6;
 }
 
 h1, h2, h3, h4 {
@@ -80,7 +81,7 @@ h1, h2, h3, h4 {
 
 section > p, section > h2, section > h3, section > h4, section > ul, section > ol, section > div {
 	max-width: 640px;
-	margin: 16px auto;
+	margin: 24px auto;
 	padding: 0 16px;
 
 }
