--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -23,11 +23,11 @@
 	--color-bg: var(--color-white);
 	--color-bg2: var(--color-gray-100);
 	--color-fg: var(--color-gray-800);
-	--color-primary: #00ffff;
-	--color-secondary: #ff00ff;
+	--color-primary: var(--color-pink-aa);
+	--color-secondary: var(--color-teal-aa);
 	--color-link: var(--color-fg);
 	--color-focus: var(--color-primary);
-	--color-mark: var(--color-secondary);
+	--color-mark: var(--color-primary);
 	--color-selection: var(--color-gray-300);
 	--color-border: var(--color-gray-300);
 	--color-button-bg: var(--color-fg);
