--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 31 May 2022 13:42:06 GMT
+ * Generated on Fri, 20 Sep 2024 15:54:51 GMT
  */
 
 :root {
@@ -24,11 +24,10 @@
   --color-gray-800: #373737;
   --color-gray-900: #262626;
   --color-gray-1000: #191919;
-  --color-purple: #a239ca;
-  --color-blue: #4717f6;
-  --color-green: #34a29e;
-  --color-red: #ff533d;
-  --color-yellow: #e5e338;
+  --color-pink-aa: #ff00ff;
+  --color-pink-aaa: #d100d1;
+  --color-teal-aa: #00a3a3;
+  --color-teal-aaa: #008080;
   --12px: 0.75rem;
   --14px: 0.875rem;
   --16px: 1rem;
