--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -30,12 +30,15 @@
 	--color-mark: var(--color-primary);
 	--color-selection: var(--color-gray-300);
 	--color-border: var(--color-gray-300);
-	--color-button-bg: var(--color-fg);
-	--color-button-fg: var(--color-bg);
-	--color-button-hover: var(--color-gray-900);
+	--color-button-bg: var(--color-bg2);
+	--color-button-fg: var(--color-fg);
+	--color-button-hover: var(--color-gray-gray-300);
 	--color-input-bg: var(--color-gray-50);
 	--color-input-fg: var(--color-gray-900);
 	--color-placeholder: var(--color-gray-500);
+
+	--color-opp-text: var(--color-teal-aaa);
+	--color-you-text: var(--color-pink-aaa);
 
 	/* "1" second duration */
 	--1s: 1ms;
@@ -83,7 +86,6 @@ section > p, section > h2, section > h3, section > h4, section > ul, section > o
 	max-width: 700px;
 	margin: 24px auto;
 	padding: 0 16px;
-
 }
 
 section > h2 {
@@ -104,4 +106,10 @@ section > figure, section > video {
 video {
 	display: block;
 	margin: 32px auto;
+}
+
+button {
+	border: 4px solid var(--color-border);
+	font-weight: bold;
+	font-size: var(--14px);
 }
