--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -73,7 +73,7 @@
 	}
 }
 
-p, h1, h2, h3, h4, li, caption {
+p, h1, h2, h3, h4, li, caption, details {
 	font-size: var(--28px);
 	line-height: 1.5;
 }
@@ -112,4 +112,18 @@ button {
 	border: 4px solid var(--color-border);
 	font-weight: bold;
 	font-size: var(--14px);
+}
+
+@media only screen and (max-width: 800px) {
+	p, h1, h2, h3, h4, li, caption, details {
+		font-size: var(--24px);
+		line-height: 1.5;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	p, h1, h2, h3, h4, li, caption, details {
+		font-size: var(--20px);
+		line-height: 1.5;
+	}
 }
