--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Mon, 23 Sep 2024 13:41:14 GMT
+ * Generated on Tue, 24 Sep 2024 13:14:36 GMT
  */
 
 :root {
@@ -31,6 +31,7 @@
   --color-red-aa: #fe5f55;
   --color-red-aaa: #e91101;
   --color-purple-aaa: #564592;
+  --11px: 0.7rem;
   --12px: 0.75rem;
   --14px: 0.875rem;
   --16px: 1rem;
