--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -51,29 +51,6 @@
 	--1s: 1ms;
 }
 
-/* dark theme */
-/* this is a starting place for dark mode - test before deploying */
-
-/* @media screen and (prefers-color-scheme:dark) {
-	:root {
-		--color-bg: var(--color-gray-900);
-		--color-fg: var(--color-gray-100);
-		--color-primary: var(--color-white);
-		--color-link: var(--color-white);
-		--color-focus: var(--color-red);
-		--color-mark: var(--color-yellow);
-		--color-selection: var(--color-gray-600);
-		--color-border: var(--color-gray-600);
-		--color-button-bg: var(--color-gray-600);
-		--color-button-fg: var(--color-gray-100);
-		--color-button-hover: var(--color-gray-700);
-		--color-input-bg: var(--color-gray-800);
-		--color-input-fg: var(--color-gray-100);
-		--color-placeholder: var(--color-gray-400);
-		--color-text-outline: var(--color-bg);
-	}
-} */
-
 @media screen and (prefers-reduced-motion: no-preference) {
 	:root {
 		--1s: 1s;
@@ -113,6 +90,14 @@ button {
 	border: 4px solid var(--color-border);
 	font-weight: bold;
 	font-size: var(--14px);
+}
+
+.color-text-you {
+	color: var(--color-you-text);
+}
+
+.color-text-opp {
+	color: var(--color-opp-text);
 }
 
 @media only screen and (max-width: 800px) {
